name:                exhaustive
version:             0.1.0.0
synopsis:            Exhaustivity Checking Library
homepage:            https://github.com/nicodelpiano/exhaustive
bug-reports:         https://github.com/nicodelpiano/exhaustive/issues
description:         A library for exhaustivity and redundancy checking.
license:             MIT
license-file:        LICENSE
author:              Nicolas Del Piano <ndel314@gmail.com>
maintainer:          Nicolas Del Piano <ndel314@gmail.com>
copyright:           (c) 2015 Nicolas Del Piano
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

extra-source-files:
  examples/*.hs
  tests/*.hs

library
  ghc-options:         -Wall
  exposed-modules:     Exhaustive
                       Exhaustive.Internal
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      tests, .
  main-is:
      Spec.hs
  other-modules:
      ExhaustiveSpec
  build-depends:
      base >=4.7 && <4.8, exhaustive, QuickCheck >=2.7, hspec   == 2.*
  default-language:    Haskell2010
